Enrich services (#3)
* refactor order-service

* refactor product-service

* add reserve stock

* add reserve stock

* update inventory

* update inventory

* update to repository adapter

* update to repository adapter
