# modules/order-service/src/main/java/com/github/darnoker/orderservice/order/persistence/OrderItemEntity.java
@@ -1,0 +1,41 @@
+package com.github.darnoker.orderservice.order.persistence;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+
+import java.math.BigDecimal;
+import java.util.UUID;
+
+@Entity
+@Table(name = "order_items")
+@Getter
+@NoArgsConstructor
+@AllArgsConstructor
+class OrderItemEntity {
+
+    @Id
+    private UUID id;
+
+    @Column(name = "order_id", nullable = false)
+    private UUID orderId;
+
+    @Column(name = "product_id", nullable = false)
+    private UUID productId;
+
+    @Column(name = "product_type", nullable = false)
+    private String productType;
+
+    @Column(name = "product_name", nullable = false)
+    private String productName;
+
+    @Column(name = "unit_price", nullable = false, precision = 19, scale = 2)
+    private BigDecimal unitPrice;
+
+    @Column(nullable = false)
+    private int quantity;
+}
