# modules/product-service/src/main/java/com/github/darnoker/productservice/product/persistence/ProductPriceHistoryEntity.java
@@ -1,0 +1,36 @@
+package com.github.darnoker.productservice.product.persistence;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+
+import java.math.BigDecimal;
+import java.time.Instant;
+import java.util.UUID;
+
+@Entity
+@Table(name = "product_price_history")
+@Getter
+@NoArgsConstructor
+@AllArgsConstructor
+class ProductPriceHistoryEntity {
+
+    @Id
+    private UUID id;
+
+    @Column(name = "product_id", nullable = false)
+    private UUID productId;
+
+    @Column(nullable = false, precision = 19, scale = 2)
+    private BigDecimal price;
+
+    @Column(name = "valid_from", nullable = false)
+    private Instant validFrom;
+
+    @Column(name = "valid_to")
+    private Instant validTo;
+}
